# llm-council-plus

./: .coverage  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  start.sh
20_receipts/: 2026-01-12_claims_api_v0.1.md
backend/: adjudicator.py  claims.py  config.py  council.py  evidence.py  job_registry.py  main.py  nightshift.py  ollama_client.py  openai_compat.py  openrouter.py  preflight.py  roundtable.py  scorer.py  search.py  settings.py  storage.py  turn_capture.py
backend/api/: __init__.py  claims.py
backend/jobs/: __init__.py  base.py  repo_docs_refresh.py  truth_validation.py
backend/modes/: __init__.py  json_recovery.py  registry.py  sessions.py  socrates_runner.py
backend/modes/socrates/: mode.yaml
backend/modes/socrates/prompts/: stop_summary.txt  system.txt  turn.txt
backend/modes/socrates/schemas/: ledger.schema.json  output.schema.json
backend/prompts/roundtable/: chair.txt  global_system.txt  moderator.txt
backend/prompts/roundtable/roles/: builder.txt  contrarian.txt  historian.txt  pragmatist.txt  skeptic.txt  stylist.txt
backend/prompts/roundtable/rounds/: r1_opening.txt  r2_critique.txt  r3_revision.txt
backend/providers/: anthropic.py  base.py  custom_openai.py  deepseek.py  google.py  groq.py  mistral.py  ollama.py  openai.py  openrouter.py
backend/resources/: fallacies_glossary.json
frontend/src/: App.jsx  api.js
frontend/src/components/: AnalyzeTab.css  AnalyzeTab.jsx  ChatInterface.css  ChatInterface.jsx  ExecutionModeToggle.jsx  GlossaryPanel.css  GlossaryPanel.jsx  LedgerPanel.css  LedgerPanel.jsx  RoundtableTimeline.css  RoundtableTimeline.jsx  Sidebar.css  Sidebar.jsx  SocratesView.css  SocratesView.jsx
tests/: conftest.py  test_adjudicator.py  test_claims.py  test_claims_api.py  test_main_endpoints.py  test_modes.py  test_nightshift.py  test_openai_compat.py  test_roundtable.py  test_truth_validation.py  test_turn_capture.py
